# tracing-otel-extra

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.articles  Dockerfile.demo  Dockerfile.users  LICENSE-MIT  README.md  docker-compose.yml  release-plz.toml
.github/workflows/: ci.yml  docker.yml  release-plz.yml
alloy/: config.alloy
crates/axum-otel/: Cargo.toml  README.md
crates/axum-otel/src/: event_macro.rs  lib.rs  make_span.rs  on_failure.rs  on_response.rs  otel.rs  otel_span.rs  request_id.rs
crates/tracing-opentelemetry/: Cargo.toml  README.md
crates/tracing-opentelemetry/src/: guard.rs  lib.rs  mod.rs  otel.rs  resource.rs  subscriber.rs
crates/tracing-otel/: Cargo.toml  README.md
crates/tracing-otel/src/: guard.rs  http.rs  layer.rs  lib.rs  logger.rs  macros.rs  otel.rs
crates/tracing-otel/src/log/: logger.rs  mod.rs
crates/tracing-otel/src/logs/: layer.rs  logger.rs  mod.rs  subscriber.rs
crates/tracing-otel/src/otel/: mod.rs  opentelemetry.rs
crates/tracing-otel/src/trace/: context.rs  fields.rs  http.rs  mod.rs  span.rs
examples/: README.md
examples/microservices/: ARCHITECTURE.md  QUICKSTART.md  README.md  config.file.alloy
examples/microservices/articles/: Cargo.toml
examples/microservices/articles/src/: main.rs
examples/microservices/users/: Cargo.toml
examples/microservices/users/src/: main.rs
examples/otel/: Cargo.toml  README.md
examples/otel/src/: main.rs
