[workspace]
members = [
    "crates/axum-otel",
    "crates/tracing-otel",
    "crates/tracing-opentelemetry",
    "examples/otel",
    "examples/microservices/articles",
    "examples/microservices/users",
]
resolver = "2"

[workspace.package]
rust-version = "1.82"
version = "0.30.8-alpha.1"
authors = ["nivek <h49987180@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/iamnivekx/tracing-otel-extra"
documentation = "https://docs.rs/tracing-otel-extra/"
readme = "README.md"
description = "Tracing and OpenTelemetry integration utility library for Rust applications."

keywords = ["http", "axum", "tracing", "logging"]
categories = ["asynchronous", "web-programming"]

[workspace.dependencies]
tracing-otel-extra = { path = "crates/tracing-otel", features = [
    "fields",
    "context",
], version = "0.30.8-alpha.1" }
tracing-opentelemetry-extra = { path = "crates/tracing-opentelemetry", version = "0.30.8-alpha.1" }
tracing-subscriber-extra = { path = "crates/tracing-subscriber", version = "0.30.7" }

tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1" }
axum = { version = "0.8" }
tower = { version = "0.5", features = [
    "buffer",
    "util",
    "retry",
    "make",
    "timeout",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
http = { version = "1.3.1" }
opentelemetry = { version = "0.30.0", default-features = false }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = [
    "trace",
] }
opentelemetry-http = { version = "0.30.0", default-features = false }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.31.0" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

# for microservices example
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_29"] }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

envy = { version = "0.4.2" }
