[package]
name = "axum-otel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
documentation.workspace = true
repository = "https://github.com/iamnivekx/axum-otel"
homepage = "https://github.com/iamnivekx/axum-otel"
readme = "README.md"
description = "OpenTelemetry tracing for axum."

[dependencies]
axum = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry-otlp = { workspace = true }
