[package]
name = "axum-otel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenTelemetry tracing for axum based on tower-http."
documentation = "https://docs.rs/axum-otel"
homepage = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/axum-otel"
repository = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/axum-otel"
readme = "README.md"
keywords = ["axum", "tracing", "opentelemetry", "logging"]

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-otel-extra = { path = "../tracing-otel", features = [
	"fields",
	"context",
] }

[dev-dependencies]
tokio = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry-otlp = { workspace = true }
