[package]
name = "tracing-otel-extra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
description = "Bootstrap utilities for tracing and OpenTelemetry integration."
documentation = "https://docs.rs/tracing-otel-extra"
homepage = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-otel"
repository = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-otel"
readme = "README.md"
keywords = ["tracing", "opentelemetry", "logging"]

[dependencies]
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Optional dependencies
clap = { workspace = true, features = ["derive", "env"], optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
env = ["clap"]
