[package]
name = "tracing-otel-extra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
description = "Bootstrap utilities for tracing and OpenTelemetry integration."
documentation = "https://docs.rs/tracing-otel-extra"
homepage = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-otel"
repository = "https://github.com/iamnivekx/tracing-otel-extra/tree/main/crates/tracing-otel"
readme = "README.md"
keywords = ["tracing", "opentelemetry", "logging"]

[dependencies]
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

http = { workspace = true, optional = true }

opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["json"], optional = true }

envy = { workspace = true, optional = true }

[dev-dependencies]
opentelemetry-http = { workspace = true }
tokio = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[features]
# Base dependencies
fields = ["dep:http"]

# Composite features
http = [
	"dep:http",
	"dep:tracing",
	"dep:opentelemetry",
	"dep:opentelemetry-http",
	"dep:tracing-opentelemetry",
	"fields",
]

# Core features
otel = [
	"dep:tracing",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
]

# Feature combinations
context = ["http"]
span = ["context", "fields", "http"]
trace = ["span"]
logger = ["dep:tracing-subscriber", "otel"]
env = ["dep:envy", "logger"]
