[package]
name = "axum-otel-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-otel = { path = "../../crates/axum-otel" }
tracing-otel-extra = { path = "../../crates/tracing-otel", features = ["env"] }

anyhow = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
