[package]
name = "axum-otel-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-otel = { workspace = true }
tracing-otel-extra = { workspace = true, features = ["env"] }

anyhow = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id"] }
tokio = { workspace = true }
tracing = { workspace = true }
