[package]
name = "articles-service"
version = "0.29.1"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-otel = { path = "../../../crates/axum-otel" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = "0.6"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio-current-thread"] }
opentelemetry-semantic-conventions = { workspace = true }
tokio = { version = "1.39", features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_29"] }
url = "2.5"
