[package]
name = "articles-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-otel = { path = "../../../crates/axum-otel" }
tracing-otel-extra = { path = "../../../crates/tracing-otel", features = [
	"otel",
	"http",
] }

tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id"] }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
