[package]
name = "users-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-otel = { path = "../../../crates/axum-otel" }
tracing-otel-extra = { path = "../../../crates/tracing-otel" }

tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
